plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.psi'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.projectlombok:lombok'
	implementation 'org.json:json:20090211'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

def nativeDllDir = file('src/main/native/build/Release').absolutePath

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs '--enable-native-access=ALL-UNNAMED'
	environment 'PATH', "${nativeDllDir};${System.getenv('PATH')}"
}

tasks.named('bootRun') {
	jvmArgs '--enable-native-access=ALL-UNNAMED'
	environment 'PATH', "${nativeDllDir};${System.getenv('PATH')}"
}
